[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/game/hamster_cage.gd" type="Script" id=1]
[ext_resource path="res://scripts/edit/draggable_hamster_cage.gd" type="Script" id=2]
[ext_resource path="res://assets/items/hamster_cage.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/rubberband_select.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 63.4082, 46.9246 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="hamster" type="Node2D"]

script/script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.730331, 0, 0, 0.701057, -4.00702, -2.69299 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )
time = 2

[node name="Sprite" type="Sprite" parent="RigidBody2D"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]

transform/pos = Vector2( -4.00702, -2.69299 )
transform/scale = Vector2( 0.730331, 0.701057 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bandselector" type="RigidBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite" type="Sprite" parent="bandselector"]

texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bandselector"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_body_enter"]

[connection signal="mouse_enter" from="RigidBody2D" to="RigidBody2D" method="_on_mouse_enter"]

[connection signal="mouse_exit" from="RigidBody2D" to="RigidBody2D" method="_on_mouse_exit"]


